# pap

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  add-pap-to-your-agent.md  blog-post-examples.md  blog-post.md
.github/ISSUE_TEMPLATE/: bug-report.md  protocol-feedback.md
.github/workflows/: ci.yml  pages.yml
ai/memory-bank/tasks/: langchain-crewai-integration-tasklist.md
crates/pap-core/: Cargo.toml
crates/pap-core/src/: error.rs  extensions.rs  lib.rs  mandate.rs  receipt.rs  scope.rs  session.rs
crates/pap-credential/: Cargo.toml
crates/pap-credential/src/: credential.rs  error.rs  lib.rs  sd_jwt.rs
crates/pap-did/: Cargo.toml
crates/pap-did/src/: document.rs  error.rs  lib.rs  principal.rs  session.rs
crates/pap-federation/: Cargo.toml
crates/pap-federation/src/: error.rs  lib.rs  peer.rs  registry.rs  server.rs  sync.rs
crates/pap-marketplace/: Cargo.toml
crates/pap-marketplace/src/: advertisement.rs  error.rs  lib.rs  registry.rs
crates/pap-proto/: Cargo.toml
crates/pap-proto/src/: envelope.rs  error.rs  lib.rs  message.rs
crates/pap-python/: Cargo.toml  README.md  pyproject.toml
crates/pap-python/python/pap/: __init__.py  _pap.pyi
crates/pap-python/src/: lib.rs
crates/pap-python/tests/: test_basic.py
crates/pap-transport/: Cargo.toml
crates/pap-transport/src/: client.rs  endpoint.rs  error.rs  handler.rs  lib.rs  server.rs
crates/pap-webauthn/: Cargo.toml
crates/pap-webauthn/src/: error.rs  lib.rs  mock_webauthn.rs  signer.rs  software.rs
docs/: blog-post.md  index.html  linkedin-post.md  specification.md
examples/delegation-chain/: Cargo.toml
examples/delegation-chain/src/: main.rs
examples/federated-discovery/: Cargo.toml
examples/federated-discovery/src/: main.rs
examples/local-ai-assistant/: .env.example  Dockerfile.marketplace  Dockerfile.orchestrator  Dockerfile.provider  Dockerfile.receipt-viewer  README.md  docker-compose.gpu.yml  docker-compose.yml  searxng-settings.yml
examples/networked-search/: Cargo.toml
examples/networked-search/src/: main.rs
examples/payment/: Cargo.toml
examples/payment/src/: main.rs
examples/search/: Cargo.toml
examples/search/src/: main.rs
examples/travel-booking/: Cargo.toml
examples/travel-booking/src/: main.rs
examples/webauthn-ceremony/: Cargo.toml
examples/webauthn-ceremony/src/: main.rs
