[workspace]
resolver = "2"
members = [
    "crates/pap-did",
    "crates/pap-core",
    "crates/pap-credential",
    "crates/pap-marketplace",
    "examples/search",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Baur-Software/pap"

[workspace.dependencies]
pap-did = { path = "crates/pap-did" }
pap-core = { path = "crates/pap-core" }
pap-credential = { path = "crates/pap-credential" }
pap-marketplace = { path = "crates/pap-marketplace" }

ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
bs58 = "0.5"
multibase = "0.9"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
