[workspace]
resolver = "2"
members = [
    "crates/pap-did",
    "crates/pap-core",
    "crates/pap-credential",
    "crates/pap-marketplace",
    "crates/pap-webauthn",
    "crates/pap-proto",
    "crates/pap-transport",
    "crates/pap-federation",
    "crates/pap-python",
    "examples/search",
    "examples/travel-booking",
    "examples/delegation-chain",
    "examples/payment",
    "examples/webauthn-ceremony",
    "examples/networked-search",
    "examples/federated-discovery",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Baur-Software/pap"

[workspace.dependencies]
pap-did = { path = "crates/pap-did" }
pap-core = { path = "crates/pap-core" }
pap-credential = { path = "crates/pap-credential" }
pap-marketplace = { path = "crates/pap-marketplace" }
pap-webauthn = { path = "crates/pap-webauthn" }
pap-proto = { path = "crates/pap-proto" }
pap-transport = { path = "crates/pap-transport" }
pap-federation = { path = "crates/pap-federation" }

ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
bs58 = "0.5"
multibase = "0.9"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
reqwest = { version = "=0.12.12", default-features = false, features = ["json", "rustls-tls"] }

# Local patch to work around Windows registry permission issue on this machine.
# The icu_locale_core crate in the cargo cache has unreadable src/ files;
# this redirects to an extracted copy. Remove once registry is repaired.
[patch.crates-io]
icu_locale_core = { path = "vendor-icu" }
