[package]
name = "pap-federation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Federated marketplace discovery for PAP agent networks"

[dependencies]
pap-did = { workspace = true }
pap-marketplace = { workspace = true }
ed25519-dalek = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
