[package]
name = "pap-python"
description = "Python bindings for the Principal Agent Protocol (PAP)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "_pap"
crate-type = ["cdylib"]

[dependencies]
pap-did = { workspace = true }
pap-core = { workspace = true }
pap-credential = { workspace = true }
pap-marketplace = { workspace = true }
pap-transport = { workspace = true }

pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
chrono = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
once_cell = "1"
tokio = { workspace = true }
