[package]
name = "pap-webauthn"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAuthn-compatible signer abstraction for PAP"

[dependencies]
pap-did = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
pap-core = { workspace = true }
