[package]
name = "pap-networked-search-example"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "networked-search"
path = "src/main.rs"

[dependencies]
pap-did = { workspace = true }
pap-core = { workspace = true }
pap-proto = { workspace = true }
pap-transport = { workspace = true }
ed25519-dalek = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
